# itmo-low-level-programming-lab3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  statements.sql
.github/workflows/: sync-gitlab.yml
client_app/: CMakeLists.txt  main.c
cmake-additions/: filename.cmake  format.cmake
connection/: CMakeLists.txt  connection.c  connection.h
database/: CMakeLists.txt  database.c  database.h  database_attribute.h  database_attribute_type.h  database_attribute_value.h  database_attribute_values.c  database_attribute_values.h  database_attributes.c  database_attributes.h  database_create_table_request.c  database_create_table_request.h  database_insert_row_request.c  database_insert_row_request.h  database_join.c  database_join.h  database_row.c  database_row.h  database_table.c  database_table.h  database_where.c  database_where.h
logger/: CMakeLists.txt  logger.c  logger.h
models/: CMakeLists.txt  models.c  models.h  models_serialization.c  models_serialization.h
paging/: CMakeLists.txt  paging.c  paging.h
parsing/: CMakeLists.txt  parsing.c  parsing.h  sql_lexer.l  sql_parser.y
schemes/: filter.json  request.json
server_app/: CMakeLists.txt  handlers.c  handlers.h  main.c
utils/: CMakeLists.txt  math_utils.h
